<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/action_map"
            android:title="@string/action_map"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_list"
            android:title="@string/action_list"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_info"
            android:title="@string/action_info"
            app:showAsAction="ifRoom" />

    </group>


</menu>



<!--

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.projet.front.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>

-->