<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">


    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.projet.front.HotelsFragment"
        android:label="@string/hotels_fragment_label"
        tools:layout="@layout/fragment_hotels">

        <action
            android:id="@+id/action_HotelsFragment_to_DetailFragment"
            app:destination="@id/SecondFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.projet.front.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">

        <action
            android:id="@+id/action_DetailFragment_to_HotelsFragment"
            app:destination="@id/FirstFragment" />

    </fragment>

    <fragment
        android:id="@+id/MapsFragment"
        android:name="com.projet.front.MapsFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_maps">
    </fragment>
    <fragment
        android:id="@+id/InfoFragment"
        android:name="com.projet.front.InfoFragment"
        android:label="@string/info_fragment_label"
        tools:layout="@layout/fragment_info">
    </fragment>

        <action android:id="@+id/action_global_FirstFragment" app:destination="@id/FirstFragment"/>
        <action android:id="@+id/action_global_MapsFragment" app:destination="@id/MapsFragment"/>
        <action android:id="@+id/action_global_InfoFragment" app:destination="@id/InfoFragment"/>

</navigation>